se hicieron cambios en lo que es dashboard